change social icon target

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
                         {% if page.home %}
                             <p>
                             {% if site.twitter %}
-                                <a href="{{ site.twitter }}" >
+                                <a href="{{ site.twitter }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -19,7 +19,7 @@
                                 </a>
                             {% endif %}
                             {% if site.youtube %}
-                                <a href="{{ site.youtube }}" >
+                                <a href="{{ site.youtube }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
@@ -27,7 +27,7 @@
                                 </a>
                             {% endif %}
                             {% if site.instagram %}
-                                <a href="{{ site.instagram }}" >
+                                <a href="{{ site.instagram }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
@@ -35,7 +35,7 @@
                                 </a>
                             {% endif %}
                             {% if site.tumblr %}
-                                <a href="{{ site.tumblr }}" >
+                                <a href="{{ site.tumblr }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
@@ -43,7 +43,7 @@
                                 </a>
                             {% endif %}
                             {% if site.facebook %}
-                                <a href="{{ site.facebook }}">
+                                <a href="{{ site.facebook }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-facebook-official fa-stack-1x fa-inverse"></i>
@@ -51,7 +51,7 @@
                                 </a>
                             {% endif %}
                             {% if site.google-plus %}
-                                <a href="{{ site.google-plus }}">
+                                <a href="{{ site.google-plus }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
@@ -67,7 +67,7 @@
                                 </a>
                             {% endif %}
                             {% if site.reddit %}
-                                <a href="{{ site.reddit }}">
+                                <a href="{{ site.reddit }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-reddit fa-stack-1x fa-inverse"></i>
@@ -75,7 +75,7 @@
                                 </a>
                             {% endif %}
                             {% if site.soundcloud %}
-                                <a href="{{ site.soundcloud }}">
+                                <a href="{{ site.soundcloud }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-soundcloud fa-stack-1x fa-inverse"></i>
@@ -83,7 +83,7 @@
                                 </a>
                             {% endif %}
                             {% if site.medium %}
-                                <a href="{{ site.medium }}">
+                                <a href="{{ site.medium }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
@@ -91,7 +91,7 @@
                                 </a>
                             {% endif %}
                             {% if site.linkedin %}
-                                <a href="{{ site.linkedin }}">
+                                <a href="{{ site.linkedin }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -99,7 +99,7 @@
                                 </a>
                             {% endif %}
                             {% if site.github %}
-                                <a href="{{ site.github }}">
+                                <a href="{{ site.github }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -107,7 +107,7 @@
                                 </a>
                             {% endif %}
                             {% if site.behance %}
-                                <a href="{{ site.behance }}">
+                                <a href="{{ site.behance }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-behance fa-stack-1x fa-inverse"></i>
@@ -115,7 +115,7 @@
                                 </a>
                             {% endif %}
                             {% if site.codepen %}
-                                <a href="{{ site.codepen }}">
+                                <a href="{{ site.codepen }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-codepen fa-stack-1x fa-inverse"></i>
@@ -123,7 +123,7 @@
                                 </a>
                             {% endif %}
                             {% if site.dribbble %}
-                                <a href="{{ site.dribbble }}">
+                                <a href="{{ site.dribbble }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-dribbble fa-stack-1x fa-inverse"></i>
@@ -131,7 +131,7 @@
                                 </a>
                             {% endif %}
                             {% if site.trello %}
-                                <a href="{{ site.trello }}">
+                                <a href="{{ site.trello }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-trello fa-stack-1x fa-inverse"></i>
@@ -139,7 +139,7 @@
                                 </a>
                             {% endif %}
                             {% if site.stack-overflow %}
-                                <a href="{{ site.stack-overflow }}">
+                                <a href="{{ site.stack-overflow }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
@@ -147,7 +147,7 @@
                                 </a>
                             {% endif %}
                             {% if site.bitcoin %}
-                                <a href="{{ site.bitcoin }}">
+                                <a href="{{ site.bitcoin }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-bitcoin fa-stack-1x fa-inverse"></i>
@@ -155,7 +155,7 @@
                                 </a>
                             {% endif %}
                             {% if site.paypal %}
-                                <a href="{{ site.paypal }}">
+                                <a href="{{ site.paypal }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-paypal fa-stack-1x fa-inverse"></i>
@@ -163,7 +163,7 @@
                                 </a>
                             {% endif %}
                             {% if site.weibo %}
-                                <a href="{{ site.weibo }}">
+                                <a href="{{ site.weibo }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
@@ -171,7 +171,7 @@
                                 </a>
                             {% endif %}
                             {% if site.zhihu %}
-                                <a href="{{ site.zhihu }}">
+                                <a href="{{ site.zhihu }}" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x " ></i>
                                         <i class="fa fa-stack-1x fa-inverse">知</i>
