--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,6 @@
 ---
 layout: default
 ---
-
-{% assign minutes = content | number_of_words | divided_by: 180 %}
-{% if minutes == 0 %}
-    {% assign read-time = site.var_less_than_a_minute_read %}
-{% else %}
-    {% assign read-time = minutes | append: "&nbsp;" | append: site.var_min_read %}
-{% endif %}
-
 <article>
         <h1>{{ page.title }}</h1>
         <div class="category">
@@ -22,7 +14,7 @@ layout: default
             {% endfor %}
         </div>
         <div class="times">
-            <span class="fa fa-calendar"style="font-size:large" > {{ page.date | date: site.date_format }} • {{ read-time }}</span>
+            <span class="fa fa-calendar"style="font-size:large" > {{ page.date | date: site.date_format }}</span>
         </div>
 
         <hr>
