--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
         <h1>{{ page.title }}</h1>
         <div class="category">
             {% for cat in page.categories %}
-                <a class="fa fa-coffee" style="font-size:large" href="/category/#{{ cat }}" title="{{ cat }}"> {{ cat|capitalize }}</a>
+                <a class="fa fa-coffee" style="font-size:large" href="/category/#{{ cat }}" title="{{ cat }}"> {{ cat }}</a>
             {% endfor %}
         </div>
         <div class="tags">
